# blackjack

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierignore  README.md  docker-assist  docker-compose.yml  tsconfig.json
Docker.server/: Dockerfile  entrypoint.sh  start_gunicorn.sh
backend/: lint.sh  manage.py  pyproject.toml  schema.json  setup.cfg
backend/api/: admin.py  helper.py  models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/deckofcards/: schema.py  settings.py  urls.py  views.py  wsgi.py
backend/deckofcards/fixtures/: users.json
backend/deckofcards/graphql/: schema.py
backend/deckofcards/graphql/types/: logout_user.py  user.py
backend/tests/: test_env.py
frontend/: .eslintignore  .eslintrc.js  .gitignore  codegen.yml  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.js  App.module.css  index.js
frontend/src/components/CardsCounterBox/: index.jsx  style.js
frontend/src/components/DealButton/: index.jsx  style.js
frontend/src/components/DeckCardList/: DeckCard.jsx  index.jsx  style.js  styleCard.js
frontend/src/components/ResetButton/: index.jsx  style.js
frontend/src/components/YouLoseMessage/: index.jsx  style.js
frontend/src/components/YouWinMessage/: index.jsx  style.js
frontend/src/components/pages/: index.jsx
frontend/src/helper/: index.js
frontend/src/styles/: global.js  index.css
postman/: deck-of-cards.postman_collection.json
